--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-debug-toolbar==1.9.1
 django-disqus==0.5
 django-extensions==1.9.9
 django-filebrowser-no-grappelli==3.7.3
+django-jet==1.0.7
 django-js-asset==0.1.1
 django-mptt==0.9.0
 django-tinymce4-lite==1.7.0
@@ -19,7 +20,6 @@ jsmin==2.2.2
 mock==2.0.0
 pbr==3.1.1
 Pillow==5.0.0
-pkg-resources==0.0.0
 Pygments==2.2.0
 python-decouple==3.1
 pytz==2017.3
