--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,36 @@ sqlparse==0.2.4
 typing==3.6.2
 urllib3==1.22
 wcwidth==0.1.7
+blessings==1.6.1
+bpython==0.16
+certifi==2017.11.5
+chardet==3.0.4
+curtsies==0.2.11
+dj-database-url==0.4.2
+Django==2.0.1
+django-crispy-forms==1.7.0
+django-debug-toolbar==1.9.1
+django-disqus==0.5
+django-extensions==1.9.9
+django-filebrowser-no-grappelli==3.7.3
+django-jet==1.0.7
+django-js-asset==0.1.1
+django-mptt==0.9.0
+django-tinymce4-lite==1.7.0
+django-widget-tweaks==1.4.1
+greenlet==0.4.12
+idna==2.6
+jsmin==2.2.2
+mock==2.0.0
+pbr==3.1.1
+Pillow==5.0.0
+pkg-resources==0.0.0
+Pygments==2.2.0
+python-decouple==3.1
+pytz==2017.3
+requests==2.18.4
+six==1.11.0
+sqlparse==0.2.4
+typing==3.6.2
+urllib3==1.22
+wcwidth==0.1.7
