--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ bpython==0.16
 certifi==2017.11.5
 chardet==3.0.4
 curtsies==0.2.11
+dj-database-url==0.5.0
 Django==2.0.1
 django-crispy-forms==1.7.0
 django-debug-toolbar==1.9.1
@@ -12,9 +13,10 @@ django-filebrowser-no-grappelli==3.7.3
 django-jet==1.0.7
 django-js-asset==0.1.1
 django-mptt==0.9.0
+django-taggit==0.23.0
 django-tinymce4-lite==1.7.0
 django-widget-tweaks==1.4.1
-greenlet==0.4.12
+greenlet==0.4.14
 idna==2.6
 jsmin==2.2.2
 mock==2.0.0
