--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ Pillow==5.0.0
 Pygments==2.2.0
 python-decouple==3.1
 pytz==2017.3
-requests==2.18.4
+requests>=2.20.0
 six==1.11.0
 sqlparse==0.2.4
 typing==3.6.2
